--- a/src/assets/images/app1/icon/iconfont.css
+++ b/src/assets/images/app1/icon/iconfont.css
@@ -1,8 +1,6 @@
 @font-face {
-  font-family: "iconfont"; /* Project id 2703585 */
-  src: url('iconfont.woff2?t=1627372572272') format('woff2'),
-       url('iconfont.woff?t=1627372572272') format('woff'),
-       url('iconfont.ttf?t=1627372572272') format('truetype');
+  font-family: "iconfont"; /* Project id  */
+  src: url('iconfont.ttf?t=1663917819201') format('truetype');
 }
 
 .iconfont {
@@ -13,39 +11,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-icon_tab_zixun_pre:before {
-  content: "\e679";
+.icon-tab_icon_cangpin:before {
+  content: "\e68d";
 }
 
-.icon-tab_icon_kuangchi_pre:before {
-  content: "\e67a";
+.icon-tab_icon_home:before {
+  content: "\e68e";
 }
 
-.icon-tab_icon_me_pre:before {
-  content: "\e67b";
+.icon-tab_icon_mine:before {
+  content: "\e690";
 }
 
-.icon-tab_icon_shop_pre:before {
-  content: "\e67c";
+.icon-icon_time:before {
+  content: "\e695";
 }
 
-.icon-icon_tab_home_pre:before {
-  content: "\e67d";
-}
-
-.icon-zixun_icon_more:before {
-  content: "\e67f";
-}
-
-.icon-zixun_icon_like:before {
-  content: "\e680";
-}
-
-.icon-home_icom_notice1:before {
-  content: "\e686";
-}
-
-.icon-home_icon_news1:before {
-  content: "\e687";
+.icon-commom_icon_copy:before {
+  content: "\e608";
 }
 
